@@ -26,6 +26,7 @@
 - Implemented enhancement #16059: DEPRECATED CSSFileList|JavaScriptList in favour of [Frontend|Backend][CSSFileList|JavaScriptList] settings
 - Updated jQuery to 1.4.0
 - Implemented enhancement #16068: ezjscore Packer option to specify domain for js/css url
+- Add possibility to use GET method if specified (yui3io: in c parameter, jqueryio: with post parameter)
 
 
 # v1.0.0  29 Sept 2009
